--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
 </head>
 <body>
 	<h1>Hi I am a text</h1>
+	<h2>Hi I am a text</h2>
+	<h3>Hi I am a text</h3>
+	<h4>Hi I am a text</h4>
+	<h5>Hi I am a text</h5>
+	<h6>Hi I am a text</h6>
 </body>
 </html>
