--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="./styles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@300;400;500;600;700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<title>Swipe</title>
 </head>
 <body>
@@ -16,5 +16,6 @@
 	<h4>Hi I am a text</h4>
 	<h5>Hi I am a text</h5>
 	<h6>Hi I am a text</h6>
+	<a href="#">LINK!</a>
 </body>
 </html>
