Added button styles, primary and secondary

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 	<h5>Hi I am a text</h5>
 	<h6>Hi I am a text</h6>
 	<a href="#">LINK!</a>
+	<button class="primary-button">Click!</button>
+	<button class="secondary-button">Click!</button>
 </body>
 </html>
