Finalize the button classes

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
 	<a href="#">LINK!</a>
 	<button class="primary-button">Click!</button>
 	<button class="secondary-button">Click!</button>
+	<button class="primary-button with-icon">
+		Click!
+		<img src="./assets/arrow-right-light.svg" alt="">
+	</button>
+	<button class="secondary-button with-icon">
+		Click!
+		<img src="./assets/arrow-right-dark.svg" alt="">
+	</button>
 </body>
 </html>
