--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 	<title>Swipe</title>
 </head>
 <body>
+	<nav class="navbar">
+		<img src="./assets/logo-white.svg" alt="Swipe, inc.">
+		<ul class="menu">
+			<li><a href="#">Products</a></li>
+			<li><a href="#">Solutions</a></li>
+			<li><a href="#">Developers</a></li>
+			<li><a href="#">Resources</a></li>
+			<li><a href="#">Pricing</a></li>
+		</ul>
+
+		<button class="primary-button navbar-button">Sign In</button>
+	</nav>
+
 	<h1>Hi I am a text</h1>
 	<h2>Hi I am a text</h2>
 	<h3>Hi I am a text</h3>
