Added layout styling

--- a/index.html
+++ b/index.html
@@ -21,5 +21,16 @@
 		</ul>
 		<button class="primary-button navbar-button">Sign In</button>
 	</nav>
+
+	<div class="section-container">
+		<div class="two-column">
+			<div class="col-left">
+				<h1>I belong to the left</h1>
+			</div>
+			<div class="col-right">
+				<h1>I belong to the right</h1>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
