--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<title>Swipe</title>
 </head>
 <body>
+	<!-- Navbar -->
 	<nav class="navbar">
 		<img src="./assets/logo-white.svg" alt="Swipe, inc.">
 		<ul class="menu">
@@ -21,16 +22,29 @@
 		</ul>
 		<button class="primary-button navbar-button">Sign In</button>
 	</nav>
-
-	<div class="section-container">
-		<div class="two-column">
-			<div class="col-left">
-				<h1>I belong to the left</h1>
-			</div>
-			<div class="col-right">
-				<h1>I belong to the right</h1>
+	<main>
+		<!-- Hero Section -->
+		<div class="hero">
+			<div class="section-container two-column">
+				<div class="col-left">
+					<h1>Payments infrastructure for the world</h1>
+					<p>Tons of companies all over the world use Swipe's seamless platform to manage their businesses's entire financial transaction infrastructure online.</p>
+					<div class="button-container">
+						<button class="primary-button with-icon">
+							Start now
+							<img src="./assets/arrow-right-light.svg" alt="">
+						</button>
+						<button class="secondary-button with-icon">
+							Start now
+							<img src="./assets/arrow-right-purple.svg" alt="">
+						</button>
+					</div>
+				</div>
+				<div class="col-right hero-phone-container">
+					<img class="hero-phone" src="./assets/hero-phone.png" alt="">
+				</div>
 			</div>
 		</div>
-	</div>
+	</main>
 </body>
 </html>
