--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		</ul>
 		<button class="primary-button navbar-button">Sign In</button>
 	</nav>
+
 	<main>
 		<!-- Hero Section -->
 		<div class="hero">
@@ -35,7 +36,7 @@
 							<img src="./assets/arrow-right-light.svg" alt="">
 						</button>
 						<button class="secondary-button with-icon">
-							Start now
+							Contact sales
 							<img src="./assets/arrow-right-purple.svg" alt="">
 						</button>
 					</div>
@@ -46,5 +47,19 @@
 			</div>
 		</div>
 	</main>
+	<div class="partners-section">
+		<div class="section-container">
+			<div class="partners-grid">
+				<img src="./assets/instacart.png" alt="instacart">
+				<img src="./assets/salesforce.png" alt="salesforce">
+				<img src="./assets/amazon.png" alt="amazon">
+				<img src="./assets/slack.png" alt="slack">
+				<img src="./assets/shopify.png" alt="shopify">
+				<img src="./assets/google.png" alt="google">
+				<img src="./assets/lyft.png" alt="lyft">
+				<img src="./assets/zoom.png" alt="zoom">
+			</div>
+		</div>
+	</div>
 </body>
 </html>
