--- a/index.html
+++ b/index.html
@@ -46,20 +46,40 @@
 				</div>
 			</div>
 		</div>
-	</main>
-	<div class="partners-section">
-		<div class="section-container">
-			<div class="partners-grid">
-				<img src="./assets/instacart.png" alt="instacart">
-				<img src="./assets/salesforce.png" alt="salesforce">
-				<img src="./assets/amazon.png" alt="amazon">
-				<img src="./assets/slack.png" alt="slack">
-				<img src="./assets/shopify.png" alt="shopify">
-				<img src="./assets/google.png" alt="google">
-				<img src="./assets/lyft.png" alt="lyft">
-				<img src="./assets/zoom.png" alt="zoom">
+		<div class="partners-section">
+			<div class="section-container">
+				<div class="partners-grid">
+					<img src="./assets/instacart.png" alt="instacart">
+					<img src="./assets/salesforce.png" alt="salesforce">
+					<img src="./assets/amazon.png" alt="amazon">
+					<img src="./assets/slack.png" alt="slack">
+					<img src="./assets/shopify.png" alt="shopify">
+					<img src="./assets/google.png" alt="google">
+					<img src="./assets/lyft.png" alt="lyft">
+					<img src="./assets/zoom.png" alt="zoom">
+				</div>
 			</div>
 		</div>
-	</div>
+		<!-- Unified Platform -->
+		<div class="unified-platform-section">
+			<div class="section-container">
+				<p class="subtitle">Unified platform</p>
+				<h2>All the payment products you'll ever need</h2>
+
+				<div class="two-column">
+					<div class="col-left">
+						<p>We've got everything you'll need and more to build websites and apps that handle payments, payouts, and much more. Swipe's products power payments for all kinds of retailers, all kinds of businesses, software platforms & marketplaces, and everything in between.</p>
+					</div>
+					<div class="col-right">
+						<p>We also help companies tackle fraud, issue invoices, send virtual and physical cards, manage financing, wrangle business spend, and much more.</p>
+					</div>
+				</div>
+				<button class="primary-button with-icon">
+					Start now
+					<img src="./assets/arrow-right-light.svg" alt="">
+				</button>
+			</div>
+		</div>
+	</main>
 </body>
 </html>
