--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
 				<div class="two-column">
 					<div class="col-left">
-						<p>We've got everything you'll need and more to build websites and apps that handle payments, payouts, and much more. Swipe's products power payments for all kinds of retailers, all kinds of businesses, software platforms & marketplaces, and everything in between.</p>
+						<p>We've got everything you'll need and more to build websites and apps that handle payments, payouts, and much more. Swipe's products power payments for <a href="#">all kinds of retailers</a>, <a href="#">all kinds of businesses</a>, <a href="#">software platforms & marketplaces</a>, and everything in between.</p>
 					</div>
 					<div class="col-right">
-						<p>We also help companies tackle fraud, issue invoices, send virtual and physical cards, manage financing, wrangle business spend, and much more.</p>
+						<p>We also help companies <a href="#">tackle fraud</a>, <a href="#">issue invoices</a>, <a href="#">send virtual and physical cards</a>, <a href="#">manage financing</a>, <a href="#">wrangle business spend</a>, and much more.</p>
 					</div>
 				</div>
 				<button class="primary-button with-icon">
