--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>Swipe</title>
 </head>
 <body>
-	<!-- Navbar -->
+	<!-- NAVBAR -->
 	<nav class="navbar">
 		<img src="./assets/logo-white.svg" alt="Swipe, inc.">
 		<ul class="menu">
@@ -24,7 +24,7 @@
 	</nav>
 
 	<main>
-		<!-- Hero Section -->
+		<!-- HERO SECTION -->
 		<div class="hero">
 			<div class="section-container two-column">
 				<div class="col-left">
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- Unified Platform -->
+		<!-- UNIFIED PLATFORM -->
 		<div class="unified-platform-section">
 			<div class="section-container">
 				<p class="subtitle">Unified platform</p>
@@ -78,23 +78,8 @@
 					Start now
 					<img src="./assets/arrow-right-light.svg" alt="">
 				</button>
-				<div class="card-container">
-					<div class="card">
-						<img class="icon" src="./assets/tools-icon.png" alt="">
-						<h3>Tools for all stacks</h3>
-						<p class="secondary-text">We offer front end and back end libraries in some of the most widely used technologies, old and new.</p>
-						<button class="secondary-button">Start now</button>
-					</div>
-					<div class="card">
-						<img class="icon" src="./assets/tools-icon.png" alt="">
-						<h3>Tools for all stacks</h3>
-						<p class="secondary-text">We offer front end and back end libraries in some of the most widely used technologies, old and new.</p>
-						<button class="secondary-button">Start now</button>
-					</div>
-				</div>
 			</div>
 		</div>
-
 		<div class="grapic-section">
 			<div class="section-container">
 				<div class="graphic-grid">
@@ -102,6 +87,44 @@
 					<img src="./assets/slack-invoice.png" alt="" id="slack-invoice">
 					<img src="./assets/phone.png" alt="" id="phone">
 					<img src="./assets/dash.png" alt="" id="dash">
+				</div>
+			</div>
+		</div>
+		<!-- INTEGRATION SECTION -->
+		<div class="integration-section">
+			<div class="section-container two-column">
+				<div class="col-left">
+					<p class="subtitle2">Designed For Engineers</p>
+					<h2>The world's best and most intuitive APIs</h2>
+					<p>We abstract the hard stuff away so your teams can focus on building good technology, instead of spending time and money reinventing the wheel.</p>
+					<button class="primary-button with-icon">
+						Start now
+						<img src="./assets/arrow-right-dark.svg" alt="">
+					</button>
+					<div class="card-container">
+						<div class="card">
+							<img src="./assets/tools-icon.png" alt="" class="icon">
+							<h3>Tools fo all stacks</h3>
+							<p class="secondary-text">We offer front end and back end libraries in some of the most widely used technologies, old and new.</p>
+							<button class="secondary-button with-icon">
+								See libraries
+								<img src="./assets/arrow-right-blue.svg" alt="">
+							</button>
+						</div>
+						<div class="card">
+							<img src="./assets/cube-icon.png" alt="" class="icon">
+							<h3>Custom Integrations</h3>
+							<p class="secondary-text">Use integrations for systems like Shopify, WooCommerce, NetSuite, and more.</p>
+							<button class="secondary-button with-icon">
+								Explore partners
+								<img src="./assets/arrow-right-blue.svg" alt="">
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="col-right">
+					<img src="./assets/api-code.png" alt="" id="api-code">
+					<img src="./assets/terminal-code.png" alt="" id="terminal-code">
 				</div>
 			</div>
 		</div>
