--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 						<p>Swipe makes moving money simple, borderless, and programmable - just like the rest of the internet. We have teams all over the world and we process billions and billions of dollars yearly for <a href="#">startups, Fortune 500s, and everything in between.</a></p>
 					</div>
 					<div class="col-right">
-						<!-- <img src="./assets/global-graphic.png" alt=""> -->
+						<img src="./assets/global-graphic.png" alt="" id="globe">
 					</div>
 				</div>
 				<div class="card-container">
