--- a/index.html
+++ b/index.html
@@ -222,6 +222,22 @@
 				</div>
 			</div>
 		</div>
+		<!-- GETTING STARTED SECTION -->
+		<div class="getting-started-section">
+			<div class="section-container two-column">
+				<div class="col-left">
+					<h2>What are you waiting for?</h2>
+					<p>Explore <a href="#">Swipe</a> now, or create an account and start accepting payments today! If you need a custom package for your business, let's chat today.</p>
+					<button class="primary-button with-icon">
+						Start now
+						<img src="./assets/arrow-right-light.svg" alt="">
+					</button>
+				</div>
+				<div class="col-right">
+
+				</div>
+			</div>
+		</div>
 	</main>
 </body>
 </html>
