Added the gradient.js feature at the top of the webpage

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 	</nav>
 
 	<main>
+		<!-- GRADIENT BACKGROUN -->
+		<canvas id="gradient-canvas"></canvas>
 		<!-- HERO SECTION -->
 		<div class="hero">
 			<div class="section-container two-column">
@@ -306,5 +308,6 @@
 			</div>
 		</footer>
 	</main>
+	<script src="./gradient.js"></script>
 </body>
 </html>
