Edit the integration section for tablet and mobile size

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</nav>
 
 	<main>
-		<!-- GRADIENT BACKGROUN -->
+		<!-- GRADIENT BACKGROUND -->
 		<canvas id="gradient-canvas"></canvas>
 		<!-- HERO SECTION -->
 		<div class="hero">
